correct html and css according to comments

--- a/index.html
+++ b/index.html
@@ -21,23 +21,18 @@
     <main>
       <section class="section-a">
         <div class="content-wrap">
-          <h2 class="section-a-title">Web & Application Development</h2>
-          <div class="section-a-text-wrapper">
-            <p class="section-a-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              sint eligendi possimus? Unde officiis magnam laborum ipsa
-              distinctio odio, vero dolores
-            </p>
-            <p class="section-text">
-              dicta aliquam aperiam repellendus. Perferendis officiis deserunt
-              velit voluptas nobis sequi animi totam, accusantium, ex eius quia,
-              natus quo?
-            </p>
-          </div>
+          <h2 class="section-title">Web & Application Development</h2>
+          <p class="section-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint
+            eligendi possimus? Unde officiis magnam laborum ipsa distinctio
+            odio, vero dolores dicta aliquam aperiam repellendus. Perferendis
+            officiis deserunt velit voluptas nobis sequi animi totam,
+            accusantium, ex eius quia, natus quo?
+          </p>
         </div>
       </section>
       <section class="section-b">
-        <ul class="section-b-list">
+        <ul class="section-b-list content-wrap">
           <li class="section-b-item">
             <img
               class="section-b-item-img"
@@ -87,25 +82,44 @@
       </section>
       <section class="section-c">
         <div class="content-wrap">
-          <h2 class="section-c-title">We handle all of your digital needs</h2>
-					<p class="section-c-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam rerum vel earum error fugiat cupiditate, dolore eius! Minus, explicabo.</p>
+          <h2 class="section-title">We handle all of your digital needs</h2>
+          <p class="section-text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam
+            rerum vel earum error fugiat cupiditate, dolore eius! Minus,
+            explicabo.
+          </p>
         </div>
       </section>
-			<section class="section-d">
-				<div class="section-d-box">
-					<h2 class="section-d-title">Contact Us</h2>
-					<p class="section-d-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, suscipit. Rerum ducimus a quod, ut et voluptas obcaecati unde fuga.</p>
-					<p class="section-d-text">contact@acmewebsolutions.test</p>
-				</div>
-				<div class="section-d-box">
-					<h2 class="section-d-title">About Our Company</h2>
-					<p class="section-d-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?</p>
-				</div>
-			</section>
+      <section class="section-d">
+        <div class="section-d-box">
+          <h2 class="section-title">Contact Us</h2>
+          <p class="section-text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum,
+            suscipit. Rerum ducimus a quod, ut et voluptas obcaecati unde fuga.
+          </p>
+          <a href="mainto:contact@acmewebsolutions.test" class="section-d-link"
+            >contact@acmewebsolutions.test</a
+          >
+        </div>
+        <div class="section-d-box">
+          <h2 class="section-title">About Our Company</h2>
+          <p class="section-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            earum porro deserunt, deleniti, quae facere repudiandae, officiis
+            est exercitationem nobis iusto doloremque! Soluta excepturi in aut
+            suscipit amet temporibus quo?
+          </p>
+        </div>
+      </section>
     </main>
-		<footer class="footer">
-			<p class="footer-text">Acme Web Solutions</p>
-			<p class="footer-text">Project By <a href="http://traversymedia.com" target="_blank" class="footer-link">Traversy Media</a></p>
-		</footer>
+    <footer class="footer">
+      <p class="footer-text">Acme Web Solutions</p>
+      <p class="footer-text">
+        Project By
+        <a href="http://traversymedia.com" target="_blank" class="footer-link"
+          >Traversy Media</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
