correct existing coments 2

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum,
             suscipit. Rerum ducimus a quod, ut et voluptas obcaecati unde fuga.
           </p>
-          <a href="mainto:contact@acmewebsolutions.test" class="section-d-link"
+          <a href="mailto:contact@acmewebsolutions.test" class="section-d-link"
             >contact@acmewebsolutions.test</a
           >
         </div>
