--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <header class="header">
+      <div class="header-bg">
+        <div class="header-bg-img"></div>
+      </div>
       <div class="content-wrap">
         <h1 class="header-title">Welcome to Acme Web Solutions</h1>
         <p class="header-text">
